--- a/notify_app/Dockerfile
+++ b/notify_app/Dockerfile
@@ -18,4 +18,4 @@ COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
 
 COPY . /usr/src/app/
 
-ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
+RUN ["chmod", "+x", "/usr/src/app/entrypoint.sh"]
